--- a/main.yml
+++ b/main.yml
@@ -36,6 +36,7 @@
         - bat
         - jq
         - fzf
+        - vimpager
     - name: Install Krew plugins
       shell: "kubectl krew install {{ item }}"
       with_items: "{{ krew_plugins }}"
