--- a/main.yml
+++ b/main.yml
@@ -38,6 +38,7 @@
         - fzf
         - vimpager
         - git-filter-repo
+        - zig
     - name: Install Krew plugins
       shell: "kubectl krew install {{ item }}"
       with_items: "{{ krew_plugins }}"
