--- a/main.yml
+++ b/main.yml
@@ -32,13 +32,14 @@
         - starship
         - neovim
         - fd
-        - exa
+        - eza
         - bat
         - jq
         - fzf
         - vimpager
         - git-filter-repo
         - zig
+        - btop
     - name: Install Krew plugins
       shell: "kubectl krew install {{ item }}"
       with_items: "{{ krew_plugins }}"
