--- a/main.yml
+++ b/main.yml
@@ -44,6 +44,7 @@
         - tldr
         - zig
         - btop
+        - zoxide
     - name: Install Krew plugins
       shell: "kubectl krew install {{ item }}"
       with_items: "{{ krew_plugins }}"
